***********
version 2.1
***********

* added support for the selectRow() method when compiled with Qore 0.8.2+


***********
version 2.0
***********

* support for Qore's prepared statement API with Qore 0.8.1+
* object and collection support courtesy of ocilib
  (http://orclib.sourceforge.net/), note that ocilib was highly modified to be
  usable in this module, mostly due to the fact that we use a separate
  environment data structure for each connection to ensure maximum thread
  scalability - the Oracle docs say that all operations on an environment
  handle or any handle derived from an environment handle (i.e. statement
  handles, etc) must be either wrapped in a mutex (when initialized with
  OCI_NO_MUTEX) or will be wrapped in a mutex by oracle (with OCI_THREADED and
  without OCI_NO_MUTEX).
  collections of collections of object, etc are supported
* support for binding and retrieving ROWID column values
* fixed retrieving NUMBER values with over 30 digits


***********
version 1.3
***********

fixed a bug setting and reading time zone information from TIMESTAMP WITH TIME
ZONE and TIMESTAMP WITH LOCAL TIME ZONE columns
fixed a bug reading and setting fractional seconds


***********
version 1.2
***********

when compiled against qore >= 0.8.0, the driver supports:
* Datasource::execRaw(), DatasourcePool::execRaw()
* time zones in date/time values (binding and retrieving)
* time resolution to the microsecond (binding and retrieving)


***********
version 1.1
***********

fixed memory error in streaming c/blob retrieval (double free)
print a warning statement if debugging is enabled if OCI_SUCCESS_WITH_INFO is
returned by Oracle
bind character values greater than 30K bytes long as a CLOB
fixed a bug setting the port number for direct connections witout TNS


*************
version 1.0.9
*************

fixed auto-reconnect to mark the datasource as closed when auto-reconnect 
fails; otherwise a crash can occur when the datasource is reused


*************